# libwebstreamer

./: .gitignore  CMakeLists.txt  CMakelists.txt  README.md  build.bat  build.yaml  build.yml  cam.camke  flat.bat
cmake/: AutoCMake.cmake
doc/: README.md  common.fbs  livestreamer.fbs  overview.md  webstreamer.fbs
lib/: CMakeLists.txt  CMakelists.txt  dispatcher.cpp  dispatcher.hpp  libwebstreamer.cpp  libwebstreamer.hpp  main.cc  node-plugin-proto.h  node_plugin_interface.h  plugin.cc  plugin.cpp  plugin_interface.h  webstreamer.cc  webstreamer.cpp  webstreamer.h
lib/app/: elementwatcher.cc  elementwatcher.h  livestream.cc  livestream.h  rtsptestclient.h  rtsptestserver.cc  rtsptestserver.h  webrtctestclient.cc  webrtctestclient.h
lib/endpoint/: rtspclient.cc  rtspclient.h  rtspservice.cc  rtspservice.h  webrtc.cc  webrtc.h
lib/fbs/: common_generated.h
lib/flatbuffers/: adapter.cpp  adapter.hpp  webrtc_generated.h  webstreamer_generated.h
lib/framework/: app.cc  app.h  endpoint.cc  endpoint.h  promise.h  rtspserver.cc  rtspserver.h
lib/include/: dispatcher.hpp
lib/include/application/endpoint/: rtspclient.hpp  rtspserver.hpp
lib/include/application/pipeline/: livestream.hpp
lib/include/fbs/: common_generated.h  livestreamer_generated.h  webstreamer_generated.h
lib/include/framework/: endpoint.hpp  pipeline.hpp  pipeline_manager.hpp
lib/include/utils/: pipejoint.hpp  status_code.hpp  type_def.hpp
lib/message/: common.hpp  endpoint.hpp  livestream.hpp  webrtc.hpp  webrtc_topic.hpp
lib/nodejs/: plugin.cpp
lib/nodejs/adapter/: dispatcher.cpp  dispatcher.hpp
lib/pipeline/: pipeline_manager.cpp  pipeline_manager.hpp
lib/pipeline/framework/: endpoint.hpp  pipeline.hpp  pipeline_manager.cpp  pipeline_manager.hpp
lib/source/: dispatcher.cc  main.cc
lib/source/application/endpoint/: rtspclient.cc  rtspserver.cc
lib/source/application/pipeline/: livestream.cc
lib/source/framework/: endpoint.cc  pipeline.cc  pipeline_manager.cc
lib/source/utils/: pipejoint.cc  type_def.cc
lib/source/utils/gstutility/: gst_inter_sink.c  gst_inter_sink.h  gst_inter_src.c  gst_inter_src.h  gst_rtsp_server.c  gst_rtsp_server.h
lib/utils/: pipejoint.h  rtspservice.cc  rtspservice.h  typedef.cc  typedef.h
schema/: webrtc.fbs  webstreamer.fbs
test/: media.js  test.js
test/lib/: commonBuf.js  livestreamerBuf.js  webstreamer.js  webstreamerBuf.js
test/schema/: common_generated.js  livestreamer_generated.js  webstreamer_generated.js
tools/: build.bat  check.bat
